--- a/src/components/psa/_psa.scss
+++ b/src/components/psa/_psa.scss
@@ -92,7 +92,7 @@
 }
 
 .psa .newGrid_container .columns-4,
-.columns-6 {
+.psa .newGrid_container .columns-6 {
   padding-bottom: 2rem;
   padding-top: 2rem;
   @include respond-to(tablet) {
